--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+test/node_modules
+node_modules
+./.pnp
 .pnp.js
 
 # testing
@@ -10,6 +11,10 @@
 
 # production
 /build
+
+#authentication
+test/auth/private.key
+test/auth/public.key
 
 # misc
 .DS_Store
