--- a/react-practice/package.json
+++ b/react-practice/package.json
@@ -26,6 +26,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
     "react-background-slider": "^1.2.0",
-    "react-bootstrap": "^1.0.0-beta.9"
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-scroll-parallax": "^2.1.2"
   }
 }
