--- a/react-practice/package.json
+++ b/react-practice/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.6.1",
