--- a/react-practice/package.json
+++ b/react-practice/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
