--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary-react": "^1.1.1"
+    "cloudinary-react": "^1.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.0"
   },
   "devDependencies": {},
   "scripts": {
