--- a/react-practice/client/package.json
+++ b/react-practice/client/package.json
@@ -7,13 +7,16 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "cloudinary-react": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch": "webpack -d --watch",
+    "serve": "serve ./public"
   },
   "eslintConfig": {
     "extends": "react-app"
