--- a/package.json
+++ b/package.json
@@ -7,10 +7,25 @@
     "test": "test"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
-    "cloudinary-react": "^1.1.1",
-    "jsonwebtoken": "^8.5.1",
-    "passport": "^0.4.0"
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
+    "concurrently": "^4.1.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^8.0.0",
+    "express": "^4.16.3",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.6.1",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.19.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "react-background-slider": "^1.2.0",
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-scroll-parallax": "^2.1.2",
+    "validator": "^11.0.0"
   },
   "devDependencies": {},
   "scripts": {
