trying to figure out how to deploy

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "react-practice",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mochifinalproject.herokuapp.com/",
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.8.6",
