--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "react-bootstrap": "^1.0.0-beta.9",
     "react-scroll-parallax": "^2.1.2",
     "validator": "^11.0.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.5"
   }
 }
