--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "build": "npm webpack --config ./config/webpack.config.js --mode production",
+    "heroku-postbuild": "webpack -p"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +15,9 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "concurrently": "^4.1.1",
     "bootstrap": "^4.3.1",
     "cloudinary-react": "^1.1.1",
+    "concurrently": "^4.1.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.0.0",
@@ -30,7 +32,8 @@
     "react-background-slider": "^1.2.0",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-scroll-parallax": "^2.1.2",
-    "validator": "^11.0.0"
+    "validator": "^11.0.0",
+    "webpack": "^4.35.2"
   },
   "devDependencies": {
     "webpack-cli": "^3.3.5"
