--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "build": "npm webpack --config ./config/webpack.config.js --mode production",
-    "heroku-postbuild": "webpack -p"
+    "build": "npm webpack --config ./config/webpack.config.js --mode production"
   },
   "author": "",
   "license": "ISC",
